# mlxMesh

./: .gitignore  .golangci.bck.yml  .golangci.yml  CLAUDE.md  Dockerfile  LICENSE  MENUBAR_RELEASING.md  Makefile  NOTICE  README.md  RELEASING.md  RUNBOOK.md  SECURITY.md  SLOS.md  TODO.md  docker-compose.yml  go.mod  go.sum
.claude/: launch.json
.github/workflows/: ci.yml  menubar-release.yml  (+1 more)
OIMDashboard/: project.yml
OIMMenuBar/: project.yml
config/: node.example.yaml
dashboard/: .env.production  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: oim-architecture.html
fastlane/: Appfile  Fastfile
landing/: docs.html  index.html  style.css  whitepaper.html
python-sdk/: .gitignore  README.md  pyproject.toml
python-sdk/src/mlxmesh/: __init__.py  client.py  crypto.py  directory.py  errors.py  models.py  pow.py  wallet.py
python-sdk/tests/: test_crypto.py  test_errors.py  test_integration.py  test_pow.py  test_wallet.py
python-sdk/tests/go_interop_helper/: main.go
scripts/: backup-pull.sh  build-release.sh  gen-dev-certs.sh  update-lab-node.sh
swift-sdk/: Package.swift  README.md
tests/: attestation_test.go  capability_test.go  coordination_test.go  coordinator_test.go  directory_test.go  exoadapter_test.go  hintvalidator_test.go  integration_test.go  moe_planner_test.go  nodeconfig_validate_test.go  pow_test.go  protocol_test.go  queue_capacity_test.go  queue_enqueue_test.go  router_dispatch_test.go  schedule_test.go  security_headers_test.go  settlement_test.go  topology_test.go  verification_test.go  wallet_test.go
(+249 files in other folders)
